agregando meta tags

--- a/pages/about.html
+++ b/pages/about.html
@@ -86,10 +86,20 @@
         </div>
         <div class="about__section about__section--parte2">
           <p class="about__texto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-            error nulla asperiores distinctio assumenda eveniet, esse corporis
-            sed sint ad voluptas nihil fuga porro quam in animi, unde, tempore
-            molestias?
+            A lo largo de mi formación como desarrolladora front-end, he
+            adquirido una base sólida en tecnologías clave para la creación de
+            sitios web modernos y funcionales. Trabajo con HTML y CSS aplicando
+            metodologías como BEM para mantener un código limpio y estructurado,
+            y utilizo Sass para escribir estilos de forma más eficiente y
+            escalable. Tengo experiencia implementando diseño responsive,
+            asegurando que cada proyecto se adapte correctamente a diferentes
+            dispositivos. Utilizo Visual Studio Code como entorno de desarrollo
+            y gestiono el control de versiones con Git y GitHub, manteniendo un
+            flujo de trabajo ordenado y profesional. Mi enfoque está orientado a
+            escribir código claro, reutilizable y alineado con buenas prácticas
+            de desarrollo. Me comprometo con la mejora continua y busco aplicar
+            mis conocimientos en proyectos que combinen funcionalidad, estética
+            y atención al detalle.
           </p>
         </div>
         <!--Educacion-->
