--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="description"
+      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Completa el formulario y contactame."
+    />
+
+    <meta
+      name="keywords"
+      content="diseño web, desarrollo front-end, portfolio, HTML, CSS, contacto"
+    />
+
+    <meta name="author" content="Ornella Romano" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
