--- a/pages/designs.html
+++ b/pages/designs.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Contactame para pedir tu diseño."
+    />
+
+    <meta
+      name="keywords"
+      content="diseño web, desarrollo front-end, portfolio, HTML, CSS, diseños"
+    />
+
+    <meta name="author" content="Ornella Romano" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
