--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,11 @@
       <section class="container about">
         <div class="about__setion about__section--parte1">
           <h2 class="about__title">Ornella Romano</h2>
-          <img class="about__img" src="../images/retrato.jpg" alt="imagen" />
+          <img
+            class="about__img"
+            src="../images/retrato.jpg"
+            alt="autoretrato"
+          />
         </div>
         <div class="about__section about__section--parte2">
           <p class="about__texto">
@@ -120,6 +124,10 @@
             San Juan Bosco(en proceso)
             <br />
             Curso de HTML y CSS (FreeCodeCamp)
+            <br />
+            Carrera de desarrollo web full-stack
+            <br />
+            CoderHouse (en proceso)
           </p>
         </div>
       </section>
