--- a/pages/designs.html
+++ b/pages/designs.html
@@ -96,11 +96,15 @@
     <main class="main">
       <section class="container designs">
         <div class="design__item design__item--1">
-          <img class="design__img" src="../images/diseño-1.jpg" alt="design" />
+          <img
+            class="design__img"
+            src="../images/diseño-1.jpg"
+            alt="diseño de logo para pagina de tatuajes"
+          />
         </div>
         <div class="design__item design__item--2">
           <h2 class="animate__animated animate__tada design__title">
-            Design 1
+            Diseño para página de tatuajes
           </h2>
           <p class="design__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
