--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         class="index__container d-flex align-items-center justify-content-center fs-1 text-white flex-column"
       >
         <h1 class="index__title">Ornella Romano</h1>
-        <img class="index__image" src="images/retrato.jpg" alt="foto" />
+        <img class="index__image" src="images/retrato.jpg" alt="autoretrato" />
         <h2 class="index__subt">Web Developer</h2>
       </div>
     </main>
