--- a/pages/contact.html
+++ b/pages/contact.html
@@ -104,7 +104,7 @@
           <img
             class="contact__img"
             src="../images/Office-cat-man.jpg"
-            alt="imagen"
+            alt="imagen-contacto"
           />
         </div>
         <form class="contact__form" action="procesarform" method="post">
