--- a/pages/designs.html
+++ b/pages/designs.html
@@ -107,10 +107,11 @@
             Diseño para página de tatuajes
           </h2>
           <p class="design__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Necessitatibus rerum maxime sint, consequuntur eaque asperiores
-            repellat sequi corrupti provident dolor impedit praesentium fugiat
-            illum vero ab quibusdam adipisci tenetur minima.
+            Este logo representa la identidad de Killua Tattoo. Con un estilo
+            inspirado en el manga y un diseño en blanco y negro, refleja la
+            personalidad del estudio: directo, expresivo y con una fuerte
+            conexión visual con el arte del tatuaje. Las iniciales KT resumen el
+            nombre del proyecto y funcionan como sello gráfico propio.
           </p>
         </div>
         <div class="design__item design__item--3">
