--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Contactame para desarrollar tu proyecto."
+    />
+
+    <meta
+      name="keywords"
+      content="diseño web, desarrollo front-end, portfolio, HTML, CSS, proyectos"
+    />
+
+    <meta name="author" content="Ornella Romano" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -94,6 +105,7 @@
             href="http://127.0.0.1:5500/registration%20form/idex.html"
             target="_blank"
             class="project"
+            alt="Registration-Form"
           >
             <img
               class="project__img"
@@ -113,6 +125,7 @@
             href="http://127.0.0.1:5500/survey%20form.%20firs%20test/index.html"
             target="_blank"
             class="project"
+            alt="Survey-form"
           >
             <img
               class="project__img"
@@ -132,6 +145,7 @@
             href="http://127.0.0.1:5500/technical%20documentation%20page/index.html"
             target="_blank"
             class="project"
+            alt="Technical-Documentation-Page"
           >
             <img
               class="project__img"
