--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Descripcion de mis habilidades."
+    />
+
+    <meta
+      name="keywords"
+      content="diseño web, desarrollo front-end, portfolio, HTML, CSS, sobre mi, habilidades, formacion"
+    />
+
+    <meta name="author" content="Ornella Romano" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
