--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
 
     <meta
       name="description"
-      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Completa el formulario y contactame."
+      content="Contactame para consultas sobre diseño web, colaboraciones o proyectos. Estoy disponible para nuevos desafíos."
     />
 
     <meta
