--- a/pages/designs.html
+++ b/pages/designs.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Contactame para pedir tu diseño."
+      content="Descubre una selección de diseños creativos."
     />
-
     <meta
       name="keywords"
       content="diseño web, desarrollo front-end, portfolio, HTML, CSS, diseños"
