--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Contactame para desarrollar tu proyecto."
+      content="Explorá mis proyectos web. Aquí podés ver ejemplos de mi trabajo como desarrolladora front-end, desde diseño hasta implementación."
     />
-
     <meta
       name="keywords"
-      content="diseño web, desarrollo front-end, portfolio, HTML, CSS, proyectos"
+      content="proyectos web, portfolio, desarrollo front-end, HTML, CSS, Sass Ornella Romano"
     />
-
     <meta name="author" content="Ornella Romano" />
     <link
       rel="stylesheet"
