--- a/pages/about.html
+++ b/pages/about.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Descripcion de mis habilidades."
+      content="Conocé más sobre mí, mi formación como desarrolladora front-end y las habilidades que aplico en cada proyecto."
     />
-
     <meta
       name="keywords"
-      content="diseño web, desarrollo front-end, portfolio, HTML, CSS, sobre mi, habilidades, formacion"
+      content="sobre mí, desarrolladora web, frontend, HTML, CSS, Sass, Ornella Romano, portfolio"
     />
+    <meta name="author" content="Ornella Romano" />
 
     <meta name="author" content="Ornella Romano" />
     <link
