cambio los titulos

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>PreEntrega1_Romano</title>
+    <title>Sobre mi</title>
   </head>
   <body>
     <!--navbar-->
