--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,7 @@
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>PreEntrega1_Romano</title>
+    <title>Contacto</title>
   </head>
   <body>
     <!--navbar-->
