--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>PreEntrega1_Romano</title>
+    <title>Mi Portafolio</title>
   </head>
   <body>
     <!--navbar-->
