--- a/pages/designs.html
+++ b/pages/designs.html
@@ -28,7 +28,7 @@
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>PreEntrega1_Romano</title>
+    <title>Mis Diseños</title>
   </head>
   <body>
     <!--navbar-->
