--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,7 +27,7 @@
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>PreEntrega1_Romano</title>
+    <title>Mis Proyectos</title>
   </head>
   <body>
     <!--navbar-->
