--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     />
 
     <meta name="author" content="Ornella Romano" />
-    <link
-      rel="shortcut icon"
-      href="icons/WhatsApp-Image.ico"
-      type="image/x-icon"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
