--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     />
 
     <meta name="author" content="Ornella Romano" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="icons/WhatsApp-Image.png"
+      type="image/png"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
