agregando metas open graph

--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
       name="keywords"
       content="diseño web, desarrollo front-end, portfolio, HTML, CSS"
     />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Portfolio de Ornella Romano" />
+    <meta
+      property="og:description"
+      content="Descubrí el portfolio profesional de Ornella Romano: diseño y desarrollo web front-end con creatividad y pasión."
+    />
+    <meta
+      property="og:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.jpg"
+    />
+    <meta property="og:url" content="https://pre-entrega2-romano.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio de Ornella Romano" />
+    <meta
+      name="twitter:description"
+      content="Diseño y desarrollo web con pasión. Conocé mi trabajo y proyectos."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.jpg"
+    />
     <meta name="author" content="Ornella Romano" />
     <link
       rel="shortcut icon"
