--- a/pages/about.html
+++ b/pages/about.html
@@ -15,6 +15,11 @@
 
     <meta name="author" content="Ornella Romano" />
     <link
+      rel="shortcut icon"
+      href="../icons/WhatsApp-Image.png"
+      type="image/png"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
