--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,11 @@
     />
 
     <meta name="author" content="Ornella Romano" />
-
+    <link
+      rel="shortcut icon"
+      href="../icons/WhatsApp-Image.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
