arreglando metas open graph

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.jpg"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
     />
     <meta property="og:url" content="https://pre-entrega2-romano.vercel.app/" />
     <meta property="og:type" content="website" />
@@ -39,7 +39,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.jpg"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
     />
     <meta name="author" content="Ornella Romano" />
     <link
