--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,31 @@
       name="keywords"
       content="diseño web, desarrollo front-end, portfolio, HTML, CSS, contacto"
     />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contacto de Ornella Romano" />
+    <meta
+      property="og:description"
+      content="¿Querés trabajar conmigo o hacer una consulta? Contactame aquí y conectemos para crear proyectos increíbles juntos."
+    />
+    <meta
+      property="og:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
+    <meta property="og:url" content="https://pre-entrega2-romano.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contacto de Ornella Romano" />
+    <meta
+      name="twitter:description"
+      content="¿Querés trabajar conmigo o hacer una consulta? Contactame aquí y conectemos para crear proyectos increíbles juntos."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
     <meta name="author" content="Ornella Romano" />
     <link
       rel="shortcut icon"
