--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,6 +11,31 @@
       name="keywords"
       content="proyectos web, portfolio, desarrollo front-end, HTML, CSS, Sass Ornella Romano"
     />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Mis Proyectos - Ornella Romano" />
+    <meta
+      property="og:description"
+      content="Explorá mis proyectos de desarrollo web, con soluciones innovadoras y tecnología actual para cada desafío."
+    />
+    <meta
+      property="og:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
+    <meta property="og:url" content="https://pre-entrega2-romano.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mis Proyectos - Ornella Romano" />
+    <meta
+      name="twitter:description"
+      content="Explorá mis proyectos de desarrollo web, con soluciones innovadoras y tecnología actual para cada desafío."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
     <meta name="author" content="Ornella Romano" />
     <link
       rel="shortcut icon"
