--- a/pages/about.html
+++ b/pages/about.html
@@ -11,8 +11,31 @@
       name="keywords"
       content="sobre mí, desarrolladora web, frontend, HTML, CSS, Sass, Ornella Romano, portfolio"
     />
-    <meta name="author" content="Ornella Romano" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Sobre Mí - Ornella Romano" />
+    <meta
+      property="og:description"
+      content="Conocé mi historia, mis habilidades y la pasión que pongo en cada proyecto de diseño y desarrollo web."
+    />
+    <meta
+      property="og:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
+    <meta property="og:url" content="https://pre-entrega2-romano.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sobre Mí - Ornella Romano" />
+    <meta
+      name="twitter:description"
+      content="Conocé mi historia, mis habilidades y la pasión que pongo en cada proyecto de diseño y desarrollo web."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
     <meta name="author" content="Ornella Romano" />
     <link
       rel="shortcut icon"
