--- a/pages/designs.html
+++ b/pages/designs.html
@@ -11,7 +11,31 @@
       name="keywords"
       content="diseño web, desarrollo front-end, portfolio, HTML, CSS, diseños"
     />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Mis Diseños - Ornella Romano" />
+    <meta
+      property="og:description"
+      content="Descubrí una selección creativa de mis diseños originales, enfocados en la estética, funcionalidad y experiencia de usuario."
+    />
+    <meta
+      property="og:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
+    <meta property="og:url" content="https://pre-entrega2-romano.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mis Diseños - Ornella Romano" />
+    <meta
+      name="twitter:description"
+      content="Descubrí una selección creativa de mis diseños originales, enfocados en la estética, funcionalidad y experiencia de usuario."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pre-entrega2-romano.vercel.app/images/img-open-graph.png"
+    />
     <meta name="author" content="Ornella Romano" />
     <link
       rel="shortcut icon"
