agrego diseño en mis diseños

--- a/pages/designs.html
+++ b/pages/designs.html
@@ -143,17 +143,21 @@
           </p>
         </div>
         <div class="design__item design__item--3">
-          <img class="design__img" src="" alt="design" />
+          <img
+            class="design__img"
+            src="../images/diseño-2.jpg"
+            alt="diseño para emprendimiento"
+          />
         </div>
         <div class="design__item design__item--4">
           <h2 class="animate__animated animate__tada design__title">
-            Design 2
+            Diseño para emprendimiento
           </h2>
           <p class="design__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
-            excepturi numquam odit laborum velit recusandae, iste consequuntur
-            minus. Autem ipsam cumque aut. Molestiae voluptatibus, tenetur cum
-            at iste velit sapiente!
+            Logotipo con tipografía serif personalizada y detalles caligráficos
+            que aportan elegancia y carácter. El elemento botánico refuerza la
+            conexión con la naturaleza y la feminidad. Un diseño limpio y
+            adaptable, pensado para destacar en formatos digitales e impresos.
           </p>
         </div>
         <div class="design__item design__item--5">
