--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="proyectos web, portfolio, desarrollo front-end, HTML, CSS, Sass Ornella Romano"
+      content="proyectos web, portfolio, desarrollo front-end, HTML, CSS, Sass"
     />
     <!-- Open Graph -->
     <meta property="og:title" content="Mis Proyectos - Ornella Romano" />
