--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
       content="diseño web, desarrollo front-end, portfolio, HTML, CSS, contacto"
     />
     <!-- Open Graph -->
-    <meta property="og:title" content="Contacto de Ornella Romano" />
+    <meta property="og:title" content="Contacto - Ornella Romano" />
     <meta
       property="og:description"
       content="¿Querés trabajar conmigo o hacer una consulta? Contactame aquí y conectemos para crear proyectos increíbles juntos."
@@ -29,7 +29,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Contacto de Ornella Romano" />
+    <meta name="twitter:title" content="Contacto - Ornella Romano" />
     <meta
       name="twitter:description"
       content="¿Querés trabajar conmigo o hacer una consulta? Contactame aquí y conectemos para crear proyectos increíbles juntos."
